<resources>
    <string name="app_name">TonnetzViz for Android</string>

    <string name="note_a">A</string>
    <string name="note_w">W</string>
    <string name="note_s">S</string>
    <string name="note_e">E</string>
    <string name="note_d">D</string>
    <string name="note_f">F</string>
    <string name="note_t">T</string>
    <string name="note_g">G</string>
    <string name="note_y">Y</string>
    <string name="note_h">H</string>
    <string name="note_u">U</string>
    <string name="note_j">J</string>

    <string name="tab_keyboard">Virtual Keyboard</string>
    <string name="tab_midi_file">MIDI file</string>
    <string name="tab_minimize">Minimize</string>

    <string name="button_select_midi_file">Select MIDI File</string>
    <string name="button_play">Play</string>
    <string name="button_stop">Stop</string>
    <string name="message_no_file_selected">No file selected</string>
    <string name="message_connected_to">Connected to </string>
    <string name="message_no_midi_device_found">No MIDI device found</string>
    <string name="message_playing_midi_file_failed">Failed playing MIDI file</string>
</resources>
