<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <WebView
        android:id="@+id/webView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </WebView>

    <TabHost
        android:id="@+id/tabHost"
        android:layout_width="match_parent"
        android:layout_height="144dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightlightgray"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                app:layout_constraintStart_toStartOf="parent"></TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@android:id/tabs"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="96dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/note_button_width"
                        android:layout_weight="2"
                        android:gravity="center">

                        <View
                            android:layout_width="0dp"
                            android:layout_height="@dimen/note_button_width"
                            android:layout_weight="1"></View>

                        <Button
                            android:id="@+id/button_w"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/note_button_width"
                            android:layout_weight="2"
                            android:text="@string/note_w" />

                        <Button
                            android:id="@+id/button_e"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/note_button_width"
                            android:layout_weight="2"
                            android:text="@string/note_e" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="@dimen/note_button_width"
                            android:layout_weight="2"></View>

                        <Button
                            android:id="@+id/button_t"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/note_button_width"
                            android:layout_weight="2"
                            android:text="@string/note_t" />

                        <Button
                            android:id="@+id/button_y"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/note_button_width"
                            android:layout_weight="2"
                            android:text="@string/note_y" />

                        <Button
                            android:id="@+id/button_u"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/note_button_width"
                            android:layout_weight="2"
                            android:text="@string/note_u" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="@dimen/note_button_width"
                            android:layout_weight="1"></View>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/note_button_width"
                        android:layout_weight="1"
                        android:gravity="center">

                        <Button
                            android:id="@+id/button_a"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/note_button_width"
                            android:layout_weight="2"
                            android:text="@string/note_a" />

                        <Button
                            android:id="@+id/button_s"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/note_button_width"
                            android:layout_weight="2"
                            android:text="@string/note_s" />

                        <Button
                            android:id="@+id/button_d"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/note_button_width"
                            android:layout_weight="2"
                            android:text="@string/note_d" />

                        <Button
                            android:id="@+id/button_f"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/note_button_width"
                            android:layout_weight="2"
                            android:text="@string/note_f" />

                        <Button
                            android:id="@+id/button_g"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/note_button_width"
                            android:layout_weight="2"
                            android:text="@string/note_g" />

                        <Button
                            android:id="@+id/button_h"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/note_button_width"
                            android:layout_weight="2"
                            android:text="@string/note_h" />

                        <Button
                            android:id="@+id/button_j"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/note_button_width"
                            android:layout_weight="2"
                            android:text="@string/note_j" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="96dp"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/note_button_width">

                        <Button
                            android:id="@+id/button_select_midi_file"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/button_select_midi_file" />

                        <Button
                            android:id="@+id/button_play"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/button_play" />

                        <Button
                            android:id="@+id/button_stop"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/button_stop" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/note_button_width">

                        <TextView
                            android:id="@+id/message"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                </LinearLayout>
            </FrameLayout>
        </RelativeLayout>
    </TabHost>

</androidx.constraintlayout.widget.ConstraintLayout>